--- a/etc/exim4/update-exim4.conf.conf
+++ b/etc/exim4/update-exim4.conf.conf
@@ -16,8 +16,9 @@
 #
 # This is a Debian specific file
 
+hostname=orange4.koffiedik.com
 dc_eximconfig_configtype='internet'
-dc_other_hostnames='orange4.koffiedik.net; lists.wolbodo.nl; wolbodo.nl; listhost.koffiedik.net; lists.koffiedik.net'
+dc_other_hostnames='lists.wolbodo.nl; orange4.koffiedik.net; wolbodo.nl; listhost.koffiedik.net; lists.koffiedik.net'
 dc_local_interfaces=''
 dc_readhost=''
 dc_relay_domains=''
