--- a/etc/sympa/sympa.conf
+++ b/etc/sympa/sympa.conf
@@ -71,7 +71,7 @@ create_list	public_listmaster
 
 ## home
 ## Directory containing mailing lists subdirectories
-#home	/home/sympa/list_data
+home	/home/sympa/list_data
 
 ## etc
 ## Directory for configuration files; it also contains scenari/ and
