--- a/etc/sympa/sympa.conf
+++ b/etc/sympa/sympa.conf
@@ -33,7 +33,7 @@ wwsympa_url	http://lists.wolbodo.nl/sympa
 ## process_archive
 ## Store distributed messages into archive
 ## This setting can be overridden by each list
-#process_archive	off
+process_archive	on
 
 ## voot_feature
 #voot_feature	off
